[package]
name    = "nrays"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[[bin]]
name = "loader3d"
path = "examples/loader3d.rs"

[dependencies]
ncollide = "*"
nalgebra = "*"
rand = "*"
num = "*"
num_cpus = "*"

[dependencies.png]
git = "https://github.com/servo/rust-png"

[dependencies.stb_image]
git = "https://github.com/servo/rust-stb-image"

[lib]
name = "nrays"
path = "src/lib.rs"

[features]
default = [ "f64" ]
f64     = []
