[package]
name    = "nrays"
version = "0.1.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[[bin]]
name = "loader3d"
path = "examples/loader3d.rs"

[dependencies]
alga     = "0.5"
ncollide = "0.11"
nalgebra = "0.11"
rand     = "0.3"
num      = "0.1"
num_cpus = "1.3"

[dependencies.png]
git = "https://github.com/servo/rust-png"

[dependencies.stb_image]
git = "https://github.com/servo/rust-stb-image"

[lib]
name = "nrays"
path = "src/lib.rs"
