[package]
name    = "nrays"
version = "0.2.0"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]

[[bin]]
name = "loader3d"
path = "examples/loader3d.rs"

[dependencies]
alga       = "0.6"
ncollide3d = "0.16"
nalgebra   = "0.15"
rand       = "0.5"
num-traits = "0.2"
num_cpus   = "1.3"

[dependencies.png]
git = "https://github.com/servo/rust-png"

[dependencies.stb_image]
git = "https://github.com/servo/rust-stb-image"

[lib]
name = "nrays"
path = "src/lib.rs"
